--- a/style.css
+++ b/style.css
@@ -1,124 +1,219 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap");
+
+:root {
+  --primary-color: #a855f7;
+  --primary-color-dark: #9333ea;
+  --secondary-color: #ca8a04;
+  --text-dark: #1f2937;
+  --text-light: #6b7280;
+  --extra-light: #faf5ff;
+  --max-width: 1200px;
+}
+
 * {
-    padding: 0;
-    margin: 0;
-  }
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
 
-  html{
-      background-color: #d9f4ff;
-  }
+a {
+  text-decoration: none;
+}
 
-  hr {
-      height: 2px;
-      background-color: aqua;
-  }
+body {
+  font-family: "Poppins", sans-serif;
+}
 
-  h1{
-      text-align: center;
-      color: #42474b;
-      height: 25px;
-      font-size: 50px;
-      padding: 35px;
-  }
+nav {
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: #ffffff;
+  z-index: 99;
+}
 
-  .wrapper {
-    display: grid;
-    height: 600px;
-    grid-template-rows: 100px 1fr;
-    grid-template-columns: 1fr;
-    grid-gap: 1px;
+.nav__content {
+  max-width: var(--max-width);
+  margin: auto;
+  padding: 1.5rem 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
 
-  }
+nav .logo a {
+  font-size: 1.5rem;
+  font-weight: 600;
+  color: var(--primary-color);
+  transition: 0.3s;
+}
+nav .logo a:hover {
+  color: var(--primary-color-dark);
+}
 
-  .buttons {
-    display: grid;
-    grid-template-rows: repeat(5, 1fr);
-    grid-template-columns: repeat(4, 1fr);
-    grid-gap: 4px;
+nav .checkbox {
+  display: none;
+}
 
-  }
+nav input {
+  display: none;
+}
+nav .checkbox i {
+  font-size: 2rem;
+  color: var(--primary-color);
+  cursor: pointer;
+}
 
-  .container {
-    width: 425px;
-    height: 600px;
-    border: 2px solid black;
-    border-radius: 10px;
-    background-color: #000000;
-    margin: 0 auto;
-    padding: auto;
-    box-shadow: 0px 0px 0px 15px rgba(0, 0, 0, 2);
-  }
+ul {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  list-style: none;
+  transition: left 0.3s;
+}
 
-  .inputArea {
-    background-color: #5b6d7c;
-    grid-column: 1/2;
+ul li a {
+  padding: 0.5rem 1rem;
+  border: 2px solid transparent;
+  text-decoration: none;
+  font-weight: 600;
+  color: var(--text-dark);
+  transition: 0.3s;
+}
+
+ul li a:hover {
+  border-top-color: var(--secondary-color);
+  border-bottom-color: var(--secondary-color);
+  color: var(--secondary-color);
+}
+
+.section {
+  background-color: var(--extra-light);
+}
+
+.section__container {
+  min-height: 100vh;
+  max-width: var(--max-width);
+  margin: auto;
+  padding: 1rem;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 4rem;
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.subtitle {
+  letter-spacing: 2px;
+  color: var(--text-light);
+  font-weight: 600;
+  margin-bottom: 0.5rem;
+}
+
+.title {
+  font-size: 2.5rem;
+  font-weight: 400;
+  line-height: 3rem;
+  color: var(--text-dark);
+  margin-bottom: 1rem;
+}
+
+.title span {
+  font-weight: 600;
+}
+
+.description {
+  line-height: 1.5rem;
+  color: var(--text-light);
+  margin-bottom: 2rem;
+}
+
+.action__btns {
+  display: flex;
+  gap: 1rem;
+}
+
+.action__btns button {
+  font-size: 1rem;
+  font-weight: 600;
+  letter-spacing: 2px;
+  padding: 1rem 2rem;
+  outline: none;
+  border: 2px solid var(--primary-color);
+  border-radius: 10px;
+  transition: 0.3s;
+  cursor: pointer;
+}
+
+.hire__me {
+  background-color: var(--primary-color);
+  color: #ffffff;
+}
+
+.hire__me:hover {
+  background-color: var(--primary-color-dark);
+}
+
+.portfolio {
+  color: var(--primary-color);
+}
+
+.portfolio:hover {
+  background-color: var(--primary-color-dark);
+  color: #ffffff;
+}
+
+.image {
+  display: grid;
+  place-items: center;
+}
+
+.image img {
+  width: min(25rem, 90%);
+  border-radius: 100%;
+}
+
+@media (width < 750px) {
+  nav .checkbox {
     display: block;
   }
 
-  input[type="text"] {
-    box-sizing: border-box;
-    margin-top: 10px;
-    margin-left: 10px;
-    padding-top: 30px;
-    padding-right: 38px;
-    padding-bottom: 10px;
-    font-size: 30px;
-    background-color: rgb(218, 216, 216);
-    text-align: right;
-    border: 2px solid rgb(37, 37, 37);
-    border-radius: 8px;
-  }
-/*   
-  input[type=button]:hover {
-    background-color: #8c8c8c;
-  } */
-
-  input[type="text"]:disabled {
-    color:#000000;
-  }
-
-  .btnr1 {
-    background: #25292c;
-    text-align: center;
-    width: 102px;
-  }
-
-  .btnr2 {
-    background: #13171d;
-    text-align: center;
-    width: 102px;
-  }
-
-  .btnr1 > input {
-    background: transparent;
-    border: none;
-    justify-content: center;
-    align-self: end;
-    color: white;
-    font-size: 2.5em;
-    margin-top: 25px;
-  }
-
-  .btnr2 > input {
-    background: transparent;
-    border: none;
-    justify-content: center;
-    align-self: end;
-    color: white;
-    font-size: 2.5em;
-    margin-top: 25px;
-  }
-
-  .btnC > input {
-    color: #ff7a00 !important;
-  }
-
-  body{
+  ul {
+    position: absolute;
     width: 100%;
-    height: 100vh;
-    background: url('new\ pic.jpg')no-repeat;
-    background-size: cover;
-    display: flex;
+    height: calc(100vh - 85px);
+    left: -100%;
+    top: 85px;
+    background-color: var(--extra-light);
+    flex-direction: column;
     justify-content: center;
-    align-items: center;
-    font-size: 1rem;
+    gap: 3rem;
   }
+
+  nav #check:checked ~ ul {
+    left: 0;
+  }
+
+  ul li a {
+    font-size: 1.25rem;
+  }
+
+  .section__container {
+    padding: 10rem 1rem 5rem 1rem;
+    text-align: center;
+    grid-template-columns: repeat(1, 1fr);
+  }
+
+  .image {
+    grid-area: 1/1/2/2;
+  }
+
+  .action__btns {
+    margin: auto;
+  }
+}
